ansible/k8s/01-mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: medical-appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog
          ports:
            - containerPort: 1025   # SMTP (χρησιμοποιείται από το backend)
            - containerPort: 8025   # Web UI
 
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: medical-appointment
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: web
      port: 8025
      targetPort: 8025
