ansible/k8s/03-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: medical-appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-data
 
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: medical-appointment
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
