ansible/k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: medical-appointment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/lamproschalatsis/medical-appointment-frontend:latest
          ports:
            - containerPort: 80
 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: medical-appointment
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
